Fixed z-index issue with controls in the rooms page that were above the header when scrolling.

--- a/Source/FacilityManagementWebsite/SmartHotel.FacilityManagementWeb/SmartHotel.FacilityManagementWeb/ClientApp/src/app/app.component.css
+++ b/Source/FacilityManagementWebsite/SmartHotel.FacilityManagementWeb/SmartHotel.FacilityManagementWeb/ClientApp/src/app/app.component.css
@@ -11,6 +11,7 @@
 app-nav-menu {
   position: fixed;
   width: 100%;
+  z-index: 1000;
 }
 
 .content {
